--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo-lev.png" />
+    <link rel="icon" href="%PUBLIC_URL%/logo-no-fondo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Impermabilizaciones Luis Espicruate - Santiago"
+      name="Impermabilizaciones Luis Espricaute - Santiago"
       content="Impermeabilizacines"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo-lev-png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo-no-fondo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Impermeabilizaciones Santiago</title>
+    <title>Impermeabilizaciones Luis Espricaute</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
